fix lifecycle failure handling and proxy reloads